// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendVote should return to the select a delegate page to unvote 1`] = `<div />`;

exports[`SendVote should return to the select a delegate page to unvote/vote 1`] = `<div />`;

exports[`SendVote should return to the select a delegate page to vote 1`] = `<div />`;

exports[`SendVote should send a unvote transaction 1`] = `
<div>
  <div
    class="flex relative flex-col min-h-screen"
  >
    <nav
      aria-labelledby="main menu"
      class="NavigationBar__NavWrapper-sc-1qsoskw-0 bewuLZ"
    >
      <div
        class="flex relative h-21"
      >
        <button
          class="flex w-12 BackButton__StyledBackButton-sc-1pe22tv-0 hLgyWD"
        >
          <div
            class="mx-auto sc-bdfBwQ iMKUsi"
            height="10"
            width="6"
          >
            <svg>
              arrow-left.svg
            </svg>
          </div>
        </button>
        <div
          class="flex flex-1 px-8"
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="NavigationBar__LogoContainer-sc-1qsoskw-2 itrWMc"
            >
              <svg
                width="44"
              >
                ark-logo.svg
              </svg>
            </div>
          </div>
          <ul
            class="flex mr-auto ml-4 space-x-8 h-21"
          >
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                <div
                  class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                />
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                title="Plugins"
              >
                <div
                  class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                />
                Plugins
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                <div
                  class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                />
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                <div
                  class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                />
                News
              </a>
            </li>
          </ul>
          <div
            class="flex items-center my-auto space-x-4"
          >
            <div>
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 dlRYmL group"
                  >
                    <button
                      class="OriginalButton__StyledButton-sc-1y2wptt-0 fNHPRi"
                      data-testid="navbar__buttons--notifications"
                      type="button"
                    >
                      <div
                        class="flex relative items-center space-x-2"
                      >
                        <div
                          class="p-1 sc-bdfBwQ liSwOQ"
                          height="18"
                          width="15"
                        >
                          <svg>
                            notification.svg
                          </svg>
                        </div>
                        <div
                          class="flex absolute right-0 justify-center items-center mr-3 -mt-3 w-3 h-3 rounded-full transition-all duration-100 ease-linear bg-theme-background dark:group-hover:bg-theme-secondary-800 group-hover:bg-theme-primary-50"
                        >
                          <div
                            class="w-2 h-2 rounded-full bg-theme-danger-500"
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex items-center"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 dlRYmL"
              >
                <button
                  class="OriginalButton__StyledButton-sc-1y2wptt-0 fNHPRi"
                  data-testid="navbar__buttons--send"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    <div
                      class="p-1 sc-bdfBwQ iyevwF"
                      height="20"
                      width="20"
                    >
                      <svg>
                        send.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex items-center"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 dlRYmL"
              >
                <button
                  class="OriginalButton__StyledButton-sc-1y2wptt-0 fNHPRi"
                  data-testid="navbar__buttons--receive"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    <div
                      class="p-1 sc-bdfBwQ iSzUah"
                      height="22"
                      width="22"
                    >
                      <svg>
                        qr-code.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
          </div>
          <div
            class="flex items-center my-auto ml-8 space-x-4"
          >
            <div
              class="text-right"
            >
              <div
                class="text-xs font-semibold text-theme-secondary-700"
              >
                Your Balance
              </div>
              <div
                class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
                data-testid="Balance__value"
              >
                <span
                  data-testid="Amount"
                >
                  0 BTC
                </span>
              </div>
            </div>
            <div
              class="relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <div
                  class="relative justify-center items-center align-middle rounded-full cursor-pointer"
                  data-testid="navbar__useractions"
                >
                  <div
                    class="flex-shrink-0 Avatar__AvatarWrapper-sc-1vsy2s2-0 jrNmMB"
                    data-testid="Avatar"
                  >
                    <div
                      class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded-full"
                    >
                      <img
                        alt="Profile Avatar"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                      />
                      <span
                        class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                      >
                        JO
                      </span>
                    </div>
                  </div>
                </div>
              </span>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-col flex-1"
    >
      <div
        class="flex-1 Section__SectionWrapper-sc-8cjvre-0 kJTPww"
      >
        <div
          class="container px-10 mx-auto"
        >
          <form
            class="mx-auto max-w-xl"
            data-testid="Form"
          >
            <div>
              <ul
                class="StepIndicator__StepWrapper-sc-15t41is-1 iToWWb"
              >
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 dATCfl"
                />
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 dATCfl"
                />
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 dATCfl"
                />
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 dATCfl"
                />
              </ul>
              <div
                class="mt-8"
              >
                <div
                  data-testid="tab-pabel__active-panel"
                >
                  <section
                    class="space-y-8"
                    data-testid="TransactionSuccessful"
                  >
                    <div
                      class="flex justify-between items-end bg-theme-background"
                    >
                      <div
                        class="space-y-4"
                      >
                        <h1
                          class="mb-0 text-3xl"
                          data-testid="header__title"
                        >
                          Transaction Sent
                        </h1>
                      </div>
                    </div>
                    <svg
                      class="w-full"
                    >
                      transaction-success-banner.svg
                    </svg>
                    <p
                      class="text-theme-secondary-text"
                    >
                      Your transaction was successfully sent. Please monitor the blockchain to ensure your transaction is confirmed and processed. The following is relevant information for your transaction:
                    </p>
                    <div>
                      <div
                        class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 UsFpT no-ligatures"
                        data-testid="TransactionDetail"
                      >
                        <div
                          class="flex-1 space-y-2 w-40 whitespace-nowrap"
                        >
                          <div
                            class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
                          >
                            ID
                          </div>
                          <div
                            class="font-semibold"
                          >
                            <div
                              class="flex overflow-hidden items-center space-x-3"
                            >
                              <span
                                class="overflow-hidden"
                              >
                                <a
                                  class="Link__AnchorStyled-sc-1q7sbxr-0 jXgXXh group"
                                  data-testid="Link"
                                  href="#"
                                  rel="noopener noreferrer"
                                  to="https://dexplorer.ark.io/transaction/32e5278cb72f24f2c04c4797dbfbffa7072f6a30e016093fdd3f7660a2ee2faf"
                                >
                                  <span
                                    class="break-all border-b border-transparent duration-200 group-hover:border-current"
                                  >
                                    <span
                                      class="inline-flex overflow-hidden"
                                    >
                                      32e5278cb72f24f2c04c4797dbfbffa7072f6a30e016093fdd3f7660a2ee2faf
                                    </span>
                                  </span>
                                  <span
                                    class="align-middle"
                                  >
                                    <div
                                      class="inline-block flex-shrink-0 pb-px text-sm duration-200 sc-bdfBwQ fPrsah"
                                      data-testid="Link__external"
                                      height="1em"
                                      width="1em"
                                    >
                                      <svg>
                                        redirect.svg
                                      </svg>
                                    </div>
                                  </span>
                                </a>
                              </span>
                              <span
                                class="flex text-theme-primary-300 dark:text-theme-secondary-600"
                              >
                                <button
                                  class="relative focus:outline-none group"
                                  data-testid="clipboard-icon__wrapper"
                                  type="button"
                                >
                                  <div
                                    class="absolute inset-0 -m-1 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                                  />
                                  <div
                                    class="sc-bdfBwQ fPrsah"
                                    height="1em"
                                    width="1em"
                                  >
                                    <svg>
                                      copy.svg
                                    </svg>
                                  </div>
                                </button>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 cHOkoL no-ligatures"
                        data-testid="TransactionDetail"
                      >
                        <div
                          class="flex-1 space-y-2 w-40 whitespace-nowrap"
                        >
                          <div
                            class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
                          >
                            Cryptoasset
                          </div>
                          <div
                            class="font-semibold"
                          >
                            ARK Devnet
                          </div>
                        </div>
                        <div
                          aria-label="ARK Devnet"
                          class="Circle__CircleWrapper-uw7h4j-0 bNDQMV border-theme-primary-100 text-theme-primary-400 ring-theme-background"
                          data-testid="NetworkIcon-ARK-ark.devnet"
                        >
                          <div
                            class="sc-bdfBwQ iyevwF"
                            data-testid="NetworkIcon__icon"
                            height="20"
                            width="20"
                          >
                            <svg>
                              ark.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                      <div
                        class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 cHOkoL no-ligatures"
                        data-testid="TransactionDetail"
                      >
                        <div
                          class="flex-1 space-y-2 w-40 whitespace-nowrap"
                        >
                          <div
                            class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
                          >
                            Sender
                          </div>
                          <div
                            class="font-semibold"
                          >
                            <div
                              class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                            >
                              <span
                                class="text-base font-semibold text-theme-text"
                                data-testid="Address__alias"
                              >
                                <span
                                  class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                                  data-testid="TruncateEnd"
                                >
                                  ARK Wallet 1
                                </span>
                              </span>
                              <span
                                class="inline-flex overflow-hidden text-base font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                                data-testid="Address__address"
                              >
                                D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                              </span>
                            </div>
                          </div>
                        </div>
                        <div
                          class="flex items-center -space-x-2"
                        >
                          <div
                            class="Circle__CircleWrapper-uw7h4j-0 bNDQMV border-theme-text text-theme-text ring-theme-background dark:border-theme-secondary-600 dark:text-theme-secondary-600"
                          >
                            <div
                              class="sc-bdfBwQ catSEV"
                              height="25"
                              width="25"
                            >
                              <svg>
                                delegate.svg
                              </svg>
                            </div>
                          </div>
                          <div
                            class="flex-shrink-0 Avatar__AvatarWrapper-sc-1vsy2s2-0 jrNmMB"
                            data-testid="Avatar"
                          >
                            <div
                              class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded-full"
                            >
                              <img
                                alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                                title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 cHOkoL no-ligatures"
                        data-testid="TransactionDetail"
                      >
                        <div
                          class="flex-1 space-y-2 w-40 whitespace-nowrap"
                        >
                          <div
                            class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
                          >
                            Transaction Type
                          </div>
                          <div
                            class="font-semibold"
                          >
                            Unvote
                          </div>
                        </div>
                        <div
                          class="Circle__CircleWrapper-uw7h4j-0 bNDQMV text-theme-secondary-900 border-theme-secondary-900 ring-theme-background dark:text-theme-secondary-600 dark:border-theme-secondary-600"
                        >
                          <div
                            class="sc-bdfBwQ bOxyah"
                            height="21"
                            width="21"
                          >
                            <svg>
                              unvote.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                      <div
                        class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 cHOkoL no-ligatures"
                        data-testid="TransactionDetail"
                      >
                        <div
                          class="flex-1 space-y-2 w-40 whitespace-nowrap"
                        >
                          <div
                            class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
                          >
                            Unvotes (1)
                          </div>
                          <div
                            class="font-semibold"
                          >
                            <div
                              class="-my-2"
                            >
                              <div
                                class="border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
                              >
                                <div
                                  class="flex items-center py-4 space-x-4"
                                >
                                  <div
                                    class="flex-shrink-0 Avatar__AvatarWrapper-sc-1vsy2s2-0 ibTSCJ"
                                    data-testid="Avatar"
                                  >
                                    <div
                                      class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded-full"
                                    >
                                      <img
                                        alt="D5L5zXgvqtg7qoGimt5vYhFuf5Ued6iWVr"
                                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 188, 212)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/></svg>"
                                        title="D5L5zXgvqtg7qoGimt5vYhFuf5Ued6iWVr"
                                      />
                                    </div>
                                  </div>
                                  <div
                                    class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                                  >
                                    <span
                                      class="text-base font-semibold text-theme-text"
                                      data-testid="Address__alias"
                                    >
                                      <span
                                        class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                                        data-testid="TruncateEnd"
                                      >
                                        genesis_42
                                      </span>
                                    </span>
                                    <span
                                      class="inline-flex overflow-hidden text-base font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                                      data-testid="Address__address"
                                    >
                                      D5L5zXgvqtg7qoGimt5vYhFuf5Ued6iWVr
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 jxdofB no-ligatures"
                        data-testid="TransactionDetail"
                      >
                        <div
                          class="flex-1 space-y-2 w-40 whitespace-nowrap"
                        >
                          <div
                            class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
                          >
                            Transaction Fee
                          </div>
                          <div
                            class="font-semibold"
                          >
                            <span
                              data-testid="Amount"
                            >
                              0.20716584 DARK
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </section>
                </div>
                <div
                  class="flex justify-end mt-10 space-x-3"
                >
                  <button
                    class="OriginalButton__StyledButton-sc-1y2wptt-0 izJbbP"
                    data-testid="SendVote__button--back-to-wallet"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      Back to Wallet
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SendVote should send a vote transaction 1`] = `
<div>
  <div
    class="flex relative flex-col min-h-screen"
  >
    <nav
      aria-labelledby="main menu"
      class="NavigationBar__NavWrapper-sc-1qsoskw-0 bewuLZ"
    >
      <div
        class="flex relative h-21"
      >
        <button
          class="flex w-12 BackButton__StyledBackButton-sc-1pe22tv-0 hLgyWD"
        >
          <div
            class="mx-auto sc-bdfBwQ iMKUsi"
            height="10"
            width="6"
          >
            <svg>
              arrow-left.svg
            </svg>
          </div>
        </button>
        <div
          class="flex flex-1 px-8"
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="NavigationBar__LogoContainer-sc-1qsoskw-2 itrWMc"
            >
              <svg
                width="44"
              >
                ark-logo.svg
              </svg>
            </div>
          </div>
          <ul
            class="flex mr-auto ml-4 space-x-8 h-21"
          >
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                <div
                  class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                />
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                title="Plugins"
              >
                <div
                  class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                />
                Plugins
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                <div
                  class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                />
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                <div
                  class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                />
                News
              </a>
            </li>
          </ul>
          <div
            class="flex items-center my-auto space-x-4"
          >
            <div>
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 dlRYmL group"
                  >
                    <button
                      class="OriginalButton__StyledButton-sc-1y2wptt-0 fNHPRi"
                      data-testid="navbar__buttons--notifications"
                      type="button"
                    >
                      <div
                        class="flex relative items-center space-x-2"
                      >
                        <div
                          class="p-1 sc-bdfBwQ liSwOQ"
                          height="18"
                          width="15"
                        >
                          <svg>
                            notification.svg
                          </svg>
                        </div>
                        <div
                          class="flex absolute right-0 justify-center items-center mr-3 -mt-3 w-3 h-3 rounded-full transition-all duration-100 ease-linear bg-theme-background dark:group-hover:bg-theme-secondary-800 group-hover:bg-theme-primary-50"
                        >
                          <div
                            class="w-2 h-2 rounded-full bg-theme-danger-500"
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex items-center"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 dlRYmL"
              >
                <button
                  class="OriginalButton__StyledButton-sc-1y2wptt-0 fNHPRi"
                  data-testid="navbar__buttons--send"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    <div
                      class="p-1 sc-bdfBwQ iyevwF"
                      height="20"
                      width="20"
                    >
                      <svg>
                        send.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex items-center"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 dlRYmL"
              >
                <button
                  class="OriginalButton__StyledButton-sc-1y2wptt-0 fNHPRi"
                  data-testid="navbar__buttons--receive"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    <div
                      class="p-1 sc-bdfBwQ iSzUah"
                      height="22"
                      width="22"
                    >
                      <svg>
                        qr-code.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
          </div>
          <div
            class="flex items-center my-auto ml-8 space-x-4"
          >
            <div
              class="text-right"
            >
              <div
                class="text-xs font-semibold text-theme-secondary-700"
              >
                Your Balance
              </div>
              <div
                class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
                data-testid="Balance__value"
              >
                <span
                  data-testid="Amount"
                >
                  0 BTC
                </span>
              </div>
            </div>
            <div
              class="relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <div
                  class="relative justify-center items-center align-middle rounded-full cursor-pointer"
                  data-testid="navbar__useractions"
                >
                  <div
                    class="flex-shrink-0 Avatar__AvatarWrapper-sc-1vsy2s2-0 jrNmMB"
                    data-testid="Avatar"
                  >
                    <div
                      class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded-full"
                    >
                      <img
                        alt="Profile Avatar"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                      />
                      <span
                        class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                      >
                        JO
                      </span>
                    </div>
                  </div>
                </div>
              </span>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-col flex-1"
    >
      <div
        class="flex-1 Section__SectionWrapper-sc-8cjvre-0 kJTPww"
      >
        <div
          class="container px-10 mx-auto"
        >
          <form
            class="mx-auto max-w-xl"
            data-testid="Form"
          >
            <div>
              <ul
                class="StepIndicator__StepWrapper-sc-15t41is-1 iToWWb"
              >
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 dATCfl"
                />
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 dATCfl"
                />
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 dATCfl"
                />
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 dATCfl"
                />
              </ul>
              <div
                class="mt-8"
              >
                <div
                  data-testid="tab-pabel__active-panel"
                >
                  <section
                    class="space-y-8"
                    data-testid="TransactionSuccessful"
                  >
                    <div
                      class="flex justify-between items-end bg-theme-background"
                    >
                      <div
                        class="space-y-4"
                      >
                        <h1
                          class="mb-0 text-3xl"
                          data-testid="header__title"
                        >
                          Transaction Sent
                        </h1>
                      </div>
                    </div>
                    <svg
                      class="w-full"
                    >
                      transaction-success-banner.svg
                    </svg>
                    <p
                      class="text-theme-secondary-text"
                    >
                      Your transaction was successfully sent. Please monitor the blockchain to ensure your transaction is confirmed and processed. The following is relevant information for your transaction:
                    </p>
                    <div>
                      <div
                        class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 UsFpT no-ligatures"
                        data-testid="TransactionDetail"
                      >
                        <div
                          class="flex-1 space-y-2 w-40 whitespace-nowrap"
                        >
                          <div
                            class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
                          >
                            ID
                          </div>
                          <div
                            class="font-semibold"
                          >
                            <div
                              class="flex overflow-hidden items-center space-x-3"
                            >
                              <span
                                class="overflow-hidden"
                              >
                                <a
                                  class="Link__AnchorStyled-sc-1q7sbxr-0 jXgXXh group"
                                  data-testid="Link"
                                  href="#"
                                  rel="noopener noreferrer"
                                  to="https://dexplorer.ark.io/transaction/d819c5199e323a62a4349948ff075edde91e509028329f66ec76b8518ad1e493"
                                >
                                  <span
                                    class="break-all border-b border-transparent duration-200 group-hover:border-current"
                                  >
                                    <span
                                      class="inline-flex overflow-hidden"
                                    >
                                      d819c5199e323a62a4349948ff075edde91e509028329f66ec76b8518ad1e493
                                    </span>
                                  </span>
                                  <span
                                    class="align-middle"
                                  >
                                    <div
                                      class="inline-block flex-shrink-0 pb-px text-sm duration-200 sc-bdfBwQ fPrsah"
                                      data-testid="Link__external"
                                      height="1em"
                                      width="1em"
                                    >
                                      <svg>
                                        redirect.svg
                                      </svg>
                                    </div>
                                  </span>
                                </a>
                              </span>
                              <span
                                class="flex text-theme-primary-300 dark:text-theme-secondary-600"
                              >
                                <button
                                  class="relative focus:outline-none group"
                                  data-testid="clipboard-icon__wrapper"
                                  type="button"
                                >
                                  <div
                                    class="absolute inset-0 -m-1 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                                  />
                                  <div
                                    class="sc-bdfBwQ fPrsah"
                                    height="1em"
                                    width="1em"
                                  >
                                    <svg>
                                      copy.svg
                                    </svg>
                                  </div>
                                </button>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 cHOkoL no-ligatures"
                        data-testid="TransactionDetail"
                      >
                        <div
                          class="flex-1 space-y-2 w-40 whitespace-nowrap"
                        >
                          <div
                            class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
                          >
                            Cryptoasset
                          </div>
                          <div
                            class="font-semibold"
                          >
                            ARK Devnet
                          </div>
                        </div>
                        <div
                          aria-label="ARK Devnet"
                          class="Circle__CircleWrapper-uw7h4j-0 bNDQMV border-theme-primary-100 text-theme-primary-400 ring-theme-background"
                          data-testid="NetworkIcon-ARK-ark.devnet"
                        >
                          <div
                            class="sc-bdfBwQ iyevwF"
                            data-testid="NetworkIcon__icon"
                            height="20"
                            width="20"
                          >
                            <svg>
                              ark.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                      <div
                        class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 cHOkoL no-ligatures"
                        data-testid="TransactionDetail"
                      >
                        <div
                          class="flex-1 space-y-2 w-40 whitespace-nowrap"
                        >
                          <div
                            class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
                          >
                            Sender
                          </div>
                          <div
                            class="font-semibold"
                          >
                            <div
                              class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                            >
                              <span
                                class="text-base font-semibold text-theme-text"
                                data-testid="Address__alias"
                              >
                                <span
                                  class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                                  data-testid="TruncateEnd"
                                >
                                  ARK Wallet 1
                                </span>
                              </span>
                              <span
                                class="inline-flex overflow-hidden text-base font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                                data-testid="Address__address"
                              >
                                D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                              </span>
                            </div>
                          </div>
                        </div>
                        <div
                          class="flex items-center -space-x-2"
                        >
                          <div
                            class="Circle__CircleWrapper-uw7h4j-0 bNDQMV border-theme-text text-theme-text ring-theme-background dark:border-theme-secondary-600 dark:text-theme-secondary-600"
                          >
                            <div
                              class="sc-bdfBwQ catSEV"
                              height="25"
                              width="25"
                            >
                              <svg>
                                delegate.svg
                              </svg>
                            </div>
                          </div>
                          <div
                            class="flex-shrink-0 Avatar__AvatarWrapper-sc-1vsy2s2-0 jrNmMB"
                            data-testid="Avatar"
                          >
                            <div
                              class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded-full"
                            >
                              <img
                                alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                                title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 cHOkoL no-ligatures"
                        data-testid="TransactionDetail"
                      >
                        <div
                          class="flex-1 space-y-2 w-40 whitespace-nowrap"
                        >
                          <div
                            class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
                          >
                            Transaction Type
                          </div>
                          <div
                            class="font-semibold"
                          >
                            Vote
                          </div>
                        </div>
                        <div
                          class="Circle__CircleWrapper-uw7h4j-0 bNDQMV text-theme-secondary-900 border-theme-secondary-900 ring-theme-background dark:text-theme-secondary-600 dark:border-theme-secondary-600"
                        >
                          <div
                            class="sc-bdfBwQ bOxyah"
                            height="21"
                            width="21"
                          >
                            <svg>
                              vote.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                      <div
                        class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 cHOkoL no-ligatures"
                        data-testid="TransactionDetail"
                      >
                        <div
                          class="flex-1 space-y-2 w-40 whitespace-nowrap"
                        >
                          <div
                            class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
                          >
                            Votes (1)
                          </div>
                          <div
                            class="font-semibold"
                          >
                            <div
                              class="-my-2"
                            >
                              <div
                                class="border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
                              >
                                <div
                                  class="flex items-center py-4 space-x-4"
                                >
                                  <div
                                    class="flex-shrink-0 Avatar__AvatarWrapper-sc-1vsy2s2-0 ibTSCJ"
                                    data-testid="Avatar"
                                  >
                                    <div
                                      class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded-full"
                                    >
                                      <img
                                        alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                                        title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                                      />
                                    </div>
                                  </div>
                                  <div
                                    class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                                  >
                                    <span
                                      class="text-base font-semibold text-theme-text"
                                      data-testid="Address__alias"
                                    >
                                      <span
                                        class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                                        data-testid="TruncateEnd"
                                      >
                                        arkx
                                      </span>
                                    </span>
                                    <span
                                      class="inline-flex overflow-hidden text-base font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                                      data-testid="Address__address"
                                    >
                                      D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 jxdofB no-ligatures"
                        data-testid="TransactionDetail"
                      >
                        <div
                          class="flex-1 space-y-2 w-40 whitespace-nowrap"
                        >
                          <div
                            class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
                          >
                            Transaction Fee
                          </div>
                          <div
                            class="font-semibold"
                          >
                            <span
                              data-testid="Amount"
                            >
                              0.20716584 DARK
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </section>
                </div>
                <div
                  class="flex justify-end mt-10 space-x-3"
                >
                  <button
                    class="OriginalButton__StyledButton-sc-1y2wptt-0 izJbbP"
                    data-testid="SendVote__button--back-to-wallet"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      Back to Wallet
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SendVote should show error if wrong mnemonic 1`] = `
<div>
  <div
    class="flex relative flex-col min-h-screen"
  >
    <nav
      aria-labelledby="main menu"
      class="NavigationBar__NavWrapper-sc-1qsoskw-0 bewuLZ"
    >
      <div
        class="flex relative h-21"
      >
        <button
          class="flex w-12 BackButton__StyledBackButton-sc-1pe22tv-0 hLgyWD"
        >
          <div
            class="mx-auto sc-bdfBwQ iMKUsi"
            height="10"
            width="6"
          >
            <svg>
              arrow-left.svg
            </svg>
          </div>
        </button>
        <div
          class="flex flex-1 px-8"
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="NavigationBar__LogoContainer-sc-1qsoskw-2 itrWMc"
            >
              <svg
                width="44"
              >
                ark-logo.svg
              </svg>
            </div>
          </div>
          <ul
            class="flex mr-auto ml-4 space-x-8 h-21"
          >
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                <div
                  class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                />
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                title="Plugins"
              >
                <div
                  class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                />
                Plugins
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                <div
                  class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                />
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                <div
                  class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                />
                News
              </a>
            </li>
          </ul>
          <div
            class="flex items-center my-auto space-x-4"
          >
            <div>
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 dlRYmL group"
                  >
                    <button
                      class="OriginalButton__StyledButton-sc-1y2wptt-0 fNHPRi"
                      data-testid="navbar__buttons--notifications"
                      type="button"
                    >
                      <div
                        class="flex relative items-center space-x-2"
                      >
                        <div
                          class="p-1 sc-bdfBwQ liSwOQ"
                          height="18"
                          width="15"
                        >
                          <svg>
                            notification.svg
                          </svg>
                        </div>
                        <div
                          class="flex absolute right-0 justify-center items-center mr-3 -mt-3 w-3 h-3 rounded-full transition-all duration-100 ease-linear bg-theme-background dark:group-hover:bg-theme-secondary-800 group-hover:bg-theme-primary-50"
                        >
                          <div
                            class="w-2 h-2 rounded-full bg-theme-danger-500"
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex items-center"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 dlRYmL"
              >
                <button
                  class="OriginalButton__StyledButton-sc-1y2wptt-0 fNHPRi"
                  data-testid="navbar__buttons--send"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    <div
                      class="p-1 sc-bdfBwQ iyevwF"
                      height="20"
                      width="20"
                    >
                      <svg>
                        send.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex items-center"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 dlRYmL"
              >
                <button
                  class="OriginalButton__StyledButton-sc-1y2wptt-0 fNHPRi"
                  data-testid="navbar__buttons--receive"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    <div
                      class="p-1 sc-bdfBwQ iSzUah"
                      height="22"
                      width="22"
                    >
                      <svg>
                        qr-code.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
          </div>
          <div
            class="flex items-center my-auto ml-8 space-x-4"
          >
            <div
              class="text-right"
            >
              <div
                class="text-xs font-semibold text-theme-secondary-700"
              >
                Your Balance
              </div>
              <div
                class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
                data-testid="Balance__value"
              >
                <span
                  data-testid="Amount"
                >
                  0 BTC
                </span>
              </div>
            </div>
            <div
              class="relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <div
                  class="relative justify-center items-center align-middle rounded-full cursor-pointer"
                  data-testid="navbar__useractions"
                >
                  <div
                    class="flex-shrink-0 Avatar__AvatarWrapper-sc-1vsy2s2-0 jrNmMB"
                    data-testid="Avatar"
                  >
                    <div
                      class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded-full"
                    >
                      <img
                        alt="Profile Avatar"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                      />
                      <span
                        class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                      >
                        JO
                      </span>
                    </div>
                  </div>
                </div>
              </span>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-col flex-1"
    >
      <div
        class="flex-1 Section__SectionWrapper-sc-8cjvre-0 kJTPww"
      >
        <div
          class="container px-10 mx-auto"
        >
          <form
            class="mx-auto max-w-xl"
            data-testid="Form"
          >
            <div>
              <ul
                class="StepIndicator__StepWrapper-sc-15t41is-1 iToWWb"
              >
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 dATCfl"
                />
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 dATCfl"
                />
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 dATCfl"
                />
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 khoCaB"
                />
              </ul>
              <div
                class="mt-8"
              >
                <div
                  data-testid="tab-pabel__active-panel"
                >
                  <div
                    class="space-y-8"
                    data-testid="AuthenticationStep"
                  >
                    <div
                      class="flex justify-between items-end bg-theme-background"
                    >
                      <div
                        class="space-y-4"
                      >
                        <h1
                          class="mb-0 text-3xl"
                          data-testid="header__title"
                        >
                          Authenticate
                        </h1>
                        <div
                          class="text-theme-secondary-text"
                          data-testid="header__subtitle"
                        >
                          Enter your mnemonic passphrase to authenticate the transaction.
                        </div>
                      </div>
                    </div>
                    <fieldset
                      class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 qzrKg"
                    >
                      <label
                        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
                        data-testid="FormLabel"
                        for="mnemonic"
                      >
                        Mnemonic
                      </label>
                      <div
                        class="fixed invisible w-auto whitespace-nowrap"
                      >
                        …
                      </div>
                      <div
                        class="Input__InputWrapperStyled-wu99qs-0 jXtMoQ"
                      >
                        <div
                          class="flex relative flex-1 h-full"
                        >
                          <input
                            aria-invalid="true"
                            class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
                            data-testid="AuthenticationStep__mnemonic"
                            name="mnemonic"
                            type="password"
                            value=""
                          />
                        </div>
                        <div
                          class="flex items-center space-x-3 divide-x divide-theme-secondary-300 text-theme-danger-500 dark:divide-theme-secondary-800"
                        >
                          <span
                            data-errortext="This mnemonic does not correspond to your wallet"
                            data-testid="Input__error"
                          >
                            <div
                              class="sc-bdfBwQ iyevwF text-theme-danger-500"
                              height="20"
                              width="20"
                            >
                              <svg>
                                alert-warning.svg
                              </svg>
                            </div>
                          </span>
                          <div
                            class="pl-3"
                          >
                            <button
                              class="flex relative justify-center items-center w-full h-full text-2xl focus:outline-none group"
                              data-testid="InputPassword__toggle"
                              type="button"
                            >
                              <div
                                class="absolute inset-0 -m-1 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                              />
                              <div
                                class="sc-bdfBwQ fPrsah"
                                height="1em"
                                width="1em"
                              >
                                <svg>
                                  eye.svg
                                </svg>
                              </div>
                            </button>
                          </div>
                        </div>
                      </div>
                    </fieldset>
                  </div>
                </div>
                <div
                  class="flex justify-end mt-10 space-x-3"
                >
                  <button
                    class="OriginalButton__StyledButton-sc-1y2wptt-0 izJbbP"
                    data-testid="SendVote__button--back"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      Back
                    </div>
                  </button>
                  <button
                    class="OriginalButton__StyledButton-sc-1y2wptt-0 fqRthJ"
                    data-testid="SendVote__button--submit"
                    disabled=""
                    type="submit"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      <span>
                        Send
                      </span>
                      <div
                        class="sc-bdfBwQ fpbFeh"
                        height="16"
                        width="16"
                      >
                        <svg>
                          send.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SendVote should show error step and go back 1`] = `
<div>
  <div
    class="flex relative flex-col min-h-screen"
  >
    <nav
      aria-labelledby="main menu"
      class="NavigationBar__NavWrapper-sc-1qsoskw-0 bewuLZ"
    >
      <div
        class="flex relative h-21"
      >
        <button
          class="flex w-12 BackButton__StyledBackButton-sc-1pe22tv-0 hLgyWD"
        >
          <div
            class="mx-auto sc-bdfBwQ iMKUsi"
            height="10"
            width="6"
          >
            <svg>
              arrow-left.svg
            </svg>
          </div>
        </button>
        <div
          class="flex flex-1 px-8"
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="NavigationBar__LogoContainer-sc-1qsoskw-2 itrWMc"
            >
              <svg
                width="44"
              >
                ark-logo.svg
              </svg>
            </div>
          </div>
          <ul
            class="flex mr-auto ml-4 space-x-8 h-21"
          >
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                <div
                  class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                />
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                title="Plugins"
              >
                <div
                  class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                />
                Plugins
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                <div
                  class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                />
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text group"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                <div
                  class="absolute inset-0 -mx-2 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
                />
                News
              </a>
            </li>
          </ul>
          <div
            class="flex items-center my-auto space-x-4"
          >
            <div>
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 dlRYmL group"
                  >
                    <button
                      class="OriginalButton__StyledButton-sc-1y2wptt-0 fNHPRi"
                      data-testid="navbar__buttons--notifications"
                      type="button"
                    >
                      <div
                        class="flex relative items-center space-x-2"
                      >
                        <div
                          class="p-1 sc-bdfBwQ liSwOQ"
                          height="18"
                          width="15"
                        >
                          <svg>
                            notification.svg
                          </svg>
                        </div>
                        <div
                          class="flex absolute right-0 justify-center items-center mr-3 -mt-3 w-3 h-3 rounded-full transition-all duration-100 ease-linear bg-theme-background dark:group-hover:bg-theme-secondary-800 group-hover:bg-theme-primary-50"
                        >
                          <div
                            class="w-2 h-2 rounded-full bg-theme-danger-500"
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex items-center"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 dlRYmL"
              >
                <button
                  class="OriginalButton__StyledButton-sc-1y2wptt-0 fNHPRi"
                  data-testid="navbar__buttons--send"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    <div
                      class="p-1 sc-bdfBwQ iyevwF"
                      height="20"
                      width="20"
                    >
                      <svg>
                        send.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex items-center"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 dlRYmL"
              >
                <button
                  class="OriginalButton__StyledButton-sc-1y2wptt-0 fNHPRi"
                  data-testid="navbar__buttons--receive"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    <div
                      class="p-1 sc-bdfBwQ iSzUah"
                      height="22"
                      width="22"
                    >
                      <svg>
                        qr-code.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
          </div>
          <div
            class="flex items-center my-auto ml-8 space-x-4"
          >
            <div
              class="text-right"
            >
              <div
                class="text-xs font-semibold text-theme-secondary-700"
              >
                Your Balance
              </div>
              <div
                class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
                data-testid="Balance__value"
              >
                <span
                  data-testid="Amount"
                >
                  0 BTC
                </span>
              </div>
            </div>
            <div
              class="relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <div
                  class="relative justify-center items-center align-middle rounded-full cursor-pointer"
                  data-testid="navbar__useractions"
                >
                  <div
                    class="flex-shrink-0 Avatar__AvatarWrapper-sc-1vsy2s2-0 jrNmMB"
                    data-testid="Avatar"
                  >
                    <div
                      class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded-full"
                    >
                      <img
                        alt="Profile Avatar"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                      />
                      <span
                        class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                      >
                        JO
                      </span>
                    </div>
                  </div>
                </div>
              </span>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-col flex-1"
    >
      <div
        class="flex-1 Section__SectionWrapper-sc-8cjvre-0 kJTPww"
      >
        <div
          class="container px-10 mx-auto"
        >
          <form
            class="mx-auto max-w-xl"
            data-testid="Form"
          >
            <div>
              <ul
                class="StepIndicator__StepWrapper-sc-15t41is-1 iToWWb"
              >
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 dATCfl"
                />
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 dATCfl"
                />
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 dATCfl"
                />
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 dATCfl"
                />
              </ul>
              <div
                class="mt-8"
              >
                <div
                  data-testid="tab-pabel__active-panel"
                >
                  <div
                    class="space-y-8"
                    data-testid="ErrorStep"
                  >
                    <div
                      class="flex justify-between items-end bg-theme-background"
                    >
                      <div
                        class="space-y-4"
                      >
                        <h1
                          class="mb-0 text-3xl"
                          data-testid="header__title"
                        >
                          Transaction Error
                        </h1>
                      </div>
                    </div>
                    <svg
                      class="w-full"
                    >
                      transaction-error-banner.svg
                    </svg>
                    <p
                      class="text-theme-secondary-text"
                    >
                      An error occurred that prevented the broadcast of this transaction. Select Retry to attempt to broadcast the transaction again. Alternatively, return to your wallet
                    </p>
                    <div
                      class="flex justify-end space-x-3"
                    >
                      <button
                        class="OriginalButton__StyledButton-sc-1y2wptt-0 izJbbP"
                        data-testid="ErrorStep__wallet-button"
                        type="button"
                      >
                        <div
                          class="flex relative items-center space-x-2"
                        >
                          Back to Wallet
                        </div>
                      </button>
                      <button
                        class="space-x-2 OriginalButton__StyledButton-sc-1y2wptt-0 dYkFxS"
                        data-testid="ErrorStep__repeat-button"
                        type="button"
                      >
                        <div
                          class="flex relative items-center space-x-2"
                        >
                          Retry
                        </div>
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="flex justify-end mt-10 space-x-3"
                />
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;
